# seewetter-bot

./: .gitignore  Cargo.toml  test-output.txt
src/: content.rs  main.rs  parse_storm_warning.rs  parser.rs  split_file.rs  utils.rs
src/test-output/: english.txt  high-wind-warning-german-baltic-coast.txt  high-wind-warning-german-north-sea-coast.txt  storm-warning.txt  test-split.txt
