[package]
name = "seewetter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
nom = "7.1.3"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10.7"
tokio = { version = "1", features = ["full"] }
